# circuit_sparsity

./: .gitignore  README.md  README_zh.md  clear_cache.py  pyproject.toml  说明.md
circuit_sparsity/: registries.py  train.py  viz.py
circuit_sparsity/examples/: bracket_counting_example.py
circuit_sparsity/inference/: gpt.py
circuit_sparsity/tiktoken_ext/: tinypython.py
tests/: test_gpt.py
